style.css
:root{
    font-size: 10px;
}
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Press Start 2P', cursive;
    text-align: center;
    color: black;
    -webkit-text-stroke: 1px rgb(0, 0, 0);
    font-weight: bolder;
}
html{
    width: 100vw;
    height: 100vh;
    padding: 2.5em 0 2.5em 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background: url(./background.gif);
    background-repeat: no-repeat;
    background-size: cover;
}
body{
    width: 55%;
    padding: 1em;
    font-size: 2.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgba(255, 255, 255, 0.6);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(4.4px);
    -webkit-backdrop-filter: blur(4.4px);
}
.pregame-container{
    width: 100%;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}
.mainmenu-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    padding: 2em;
    z-index: 1;
}
.mainmenu-container h1 {
    margin-bottom: 10rem;
}
.mainmenu-container p {
    margin-bottom: 5rem;
}
.mainmenu-container div {
    display: flex;
    flex-flow: column;
    gap: 1rem;
}
.character-selection {
    width: 100%;
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    padding: 2em;
    gap: 2rem;
    z-index: 2;
    font-size: 4rem;
}
.character-selection input {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 4rem;
}
.character-selection div {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}
input{
    border: 1px solid black;
    background: transparent;
    padding: 2rem;
    font-size: 3.5rem;
}
input:hover {
    animation: blinking 600ms infinite;
}
input:disabled {
    color: gray;
    animation: none;
}
#reset:hover {
    background: rgb(158, 2, 2);
}
@keyframes blinking {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}
.game-container {
    max-width: 60%;
    padding: 0 4.5em 0 4.5em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2.5rem;
    z-index: 1;
}
.player-info {
    min-width: 250%;
    display: flex;
    justify-content: center;
    margin-bottom: auto;
    gap: 2rem;
}
.player-info > * {
    flex-grow: 1;
    min-width: 0;
}
.player {
    display: flex;
    width: 100%;
    flex-direction: column;
    gap: 2rem;
}
#player-1 div {
    text-align: left;
    margin-right: auto;
}
#player-2 div {
    text-align: right;
}
.player-info :is(#player1-name, #player2-name) {
    line-height: 3rem;
    height: 7rem;
}
#player1-record, #player2-record {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    line-height: 3rem;
}
.turn-info{
    width: 100%;
    border: 1px solid black;
    padding: 1em;
    text-align: center;
    font-size: 1.5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3.5rem;
    line-height: 4rem;
}
#game-turn{
    font-size: 2.5vw;
    white-space: nowrap;
    text-decoration: underline;
}
.tiles-container{
    width: 20vw;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: auto;
    row-gap: 0;
    gap: 0;
}
.tiles{
    border: 1px solid white;
    aspect-ratio: 1/1;
    display: grid;
    place-content: center;
    font-size: 5rem;
    border: 2px solid black;
}
.tiles:nth-child(1) {
    border-top: transparent;
    border-left: transparent;
}
.tiles:nth-child(2) {
    border-top: transparent;
}
.tiles:nth-child(3) {
    border-top: transparent;
    border-right: transparent;
}
.tiles:nth-child(4) {
    border-left: transparent;
}
.tiles:nth-child(6) {
    border-right: transparent;
}
.tiles:nth-child(7) {
    border-left: transparent;
    border-bottom: transparent;
}
.tiles:nth-child(8) {
    border-bottom: transparent;
}
.tiles:nth-child(9) {
    border-right: transparent;
    border-bottom: transparent;
}
.controls-container{
    margin-top: auto;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    place-content: center;
    gap: 1rem;
}
.controls-container input {
    font-size: 1.5vw;
}
#menu {
    grid-column-start: 2;
}
.unshow{
    display: none;
}
@media only screen and (max-width: 449px) {
    :root {
        font-size: 6px;
    }
    body {
        width: 90%;
    }
    .tiles-container {
        width: 55vw;
    }
    .controls-container{
        grid-template-columns: repeat(2,1fr);
    }
    .controls-container input {
        font-size: 4.5vw;
    }
    .player-info {
        font-size: 3.25vw;
    }
    .turn-info {
        font-size: 3.5vw;
        line-height: 4rem;
    }
    #game-turn {
        font-size: 4vw;
    }
    .player-info :is(#player1-name, #player2-name) {
        line-height: 4rem;
        height: 8rem;
    }
    #player1-record, #player2-record {
        line-height: 4rem;
    }
}
@media only screen and (min-width: 450px) and (max-width: 699px) {
    :root {
        font-size: 6px;
    }
    body {
        width: 90%;
    }
    .tiles-container {
        width: 55vw;
    }
    .controls-container{
        grid-template-columns: repeat(2,1fr);
    }
    .controls-container input {
        font-size: 4.5vw;
    }
    .player-info {
        font-size: 3.25vw;
    }
    .turn-info {
        font-size: 3.5vw;
        line-height: 5rem;
    }
    #game-turn {
        font-size: 4vw;
    }
    .player-info :is(#player1-name, #player2-name) {
        line-height: 4rem;
        height: 12rem;
    }
    #player1-record, #player2-record {
        line-height: 5rem;
    }
}
@media only screen and (min-width: 700px) and (max-width: 829px) {
    body {
        width: 75vw;
    }
    .tiles-container {
        width: 40vw;
    }
    .controls-container input {
        font-size: 2.5vw;
    }
    .player-info {
        font-size: 2.25vw
    }
    .turn-info {
        font-size: 3.5vw;
        line-height: 3rem;
    }
}
@media only screen and (min-width: 830px) and (max-width: 970px) {
    body {
        width: 65vw;
    }
    .tiles-container {
        width: 35vw;
    }
    .controls-container input {
        font-size: 2.5vw;
    }
    .player-info {
        font-size: 2vw
    }
    .turn-info {
        font-size: 2.5vw;
        line-height: 3rem;
    }
}
@media only screen and (min-width: 971px) and (max-width: 1130px) {
    body {
        width: 60vw;
    }
    .tiles-container {
        width: 30vw;
    }
    .controls-container input {
        font-size: 2vw;
    }
    .player-info {
        font-size: 2vw
    }
    .turn-info {
        font-size: 2vw;
        line-height: 3rem;
    }
}
@media only screen and (min-width: 1131px) {
    .tiles-container {
        width: 20vw;
    }
}

